--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .climate-factions {
-  background: #fafafa;
+  background: #f1f1f1;
   font-family: sans-serif;
   font-size: 12px;
   position: relative;
